AARCH64: Missing memory barriers for CMS collector

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: None
    • Component/s: hotspot
    • b89
    • aarch64

        While we have StoreStore barriers to keep card table updates in the right place in C2, we do not have them in C1 or in the interpreter. This is a window in which concurrent marking the old generation may see a null pointer instead of a real object pointer and miss marking an object.

              Assignee:
              Andrew Haley
              Reporter:
              Andrew Haley
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: