8135018: AARCH64: Missing memory barriers for CMS collector

Add StoreStore barrier when CMS needs them

Reviewed-by: tschatzl